structures basics ready

--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git</title>
+    <title>Display Grid</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>Git</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus optio ipsam minima repellendus fugiat repudiandae doloribus molestiae veritatis accusamus, consectetur deserunt possimus maxime maiores minus omnis explicabo debitis ratione quis iste corporis eius ut. Voluptatem dolor error doloribus maxime, facilis temporibus sapiente distinctio dignissimos iste deserunt recusandae officia optio nemo?</p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ullam reprehenderit nihil quisquam quidem, suscipit alias voluptates quia temporibus numquam pariatur! Repellat voluptatem reiciendis ratione consequatur reprehenderit est perspiciatis corrupti voluptate vel laboriosam nulla quis, a sapiente perferendis quam id iste animi quaerat. Voluptatem, ea suscipit quis facere corporis tempora?
-    </p>
-
-    <h2>dasdadas</h2>
+    <header>
+        <nav>
+            <ul>
+                <li class="nav-item">
+                    <a href="/pages/examples/examples-1.html">ejemplo 1</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/pages/examples/examples-2.html">ejemplo 2</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/pages/examples/examples-3.html">ejemplo 3</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <h1>Display Grid</h1>
+    
 </body>
 </html>
